--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="yandex-verification" content="87859b2bba622e24" />
+    <meta name="yandex-verification" content="87859b2bba622e24">
     <link rel="stylesheet" href="main.css">
     <title>Каталог</title>
     <link rel="icon" href="img/logo 1.png">
