--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="yandex-verification" content="926e3139e3cf5e30">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="main.css">
     <title>Климатические Системы в Уфе</title>
     <link rel="icon" href="img/logo 1.png">
