--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
+    <meta name="description" conten="Кондиционеры в Уфе по доступным Ценам и Доставкой по Городу!"
     <link rel="stylesheet" href="main.css">
     <title>Климатические Системы в Уфе</title>
     <link rel="icon" href="img/logo 1.png">
